# multi-agent-research-ppt-generator

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  render.yaml  requirements.txt
backend/app/: main.py
backend/app/agents/: analyst_agent.py  designer_agent.py  graph.py  researcher_agent.py  state.py
backend/app/agents/tools/: scraper_tools.py  search_tools.py
backend/app/api/: routes.py
backend/app/core/: config.py  llm_router.py  logging_config.py
backend/app/models/: schemas.py
backend/app/services/: pptx_engine.py
frontend/: README.md  app.js  index.html  package.json  styles.css
